--- a/full-stack.html
+++ b/full-stack.html
@@ -38,8 +38,12 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.smartrecruiters.com/AxiusTechnologiesInc/743999692136126-java-fullstack-developer'>Axius Technologies Inc Java Fullstack Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.jobvite.com/lewispr/job/oLvEafwO'>LEWIS Careers - Full Stack Wordpress Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/AxiusTechnologiesInc/743999692136126-java-fullstack-developer'>Axius Technologies Inc Java Fullstack Developer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/samsung-next/job/oAXCafw3'>Samsung NEXT Careers - Senior Full Stack Engineer</a></h5> 
@@ -58,7 +62,7 @@
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/labineassociates/job/xa93zccupzt1r1whzxewkzrzwa'>Fullstack engineer for a start-up in San Francisco | Job Opportunities</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/labineassociates/job/xa93zccupzt1r1whzxewkzrzwa'>Fullstack engineer for a start-up in San Francisco | Job Opportunities</a></h5> 
 <p><span class="badge badge-light">San Francisco San Francisco</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -78,7 +82,7 @@
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/webmd/job/ouaCafwa'>WebMD Careers - Full Stack Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/webmd/job/ouaCafwa'>WebMD Careers - Full Stack Developer</a></h5> 
 <p><span class="badge badge-light">New York New York</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -90,7 +94,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://productsup.join.com/jobs/266046-php-full-stack-developer-m-f-d'>Job @ Productsup (Berlin): PHP Full-Stack Develope... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://productsup.join.com/jobs/266046-php-full-stack-developer-m-f-d'>Job @ Productsup (Berlin): PHP Full-Stack Develope... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -122,7 +126,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/LecleVietnam1/743999692351833-fullstack-web-developer'>Lecle Vietnam Fullstack Web Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/LecleVietnam1/743999692351833-fullstack-web-developer'>Lecle Vietnam Fullstack Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -185,7 +189,7 @@ generation web and mobile components and interfaces. Design and build a?...</p>
 Developer to support USAID's Office of Transition Initiatives (OTI). In this position
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/scout24/jobs/1785556'>Job Application for Senior Fullstack Engineer - Scala - Private Seller (m/w/d) at Scout24</a></h5> 
+<h5><a href='https://boards.greenhouse.io/scout24/jobs/1785556'>Job Application for Senior Fullstack Engineer - Scala - Private Seller (m/w/d) at Scout24</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -193,7 +197,7 @@ Developer to support USAID's Office of Transition Initiatives (OTI). In this pos
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://juniqe.join.com/jobs/265721-mid-senior-full-stack-engineer-f-m-d-berlin-full-time'>Job @ juniqe (Berlin): (Mid/Senior) Full-Stack Eng... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://juniqe.join.com/jobs/265721-mid-senior-full-stack-engineer-f-m-d-berlin-full-time'>Job @ juniqe (Berlin): (Mid/Senior) Full-Stack Eng... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -227,7 +231,7 @@ business?...</p>
 Rochester School is a private school focused on environmental sustainability and
 ?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/corelight/jobs/1789018'>Job Application for Engineering: Sr. Full-Stack Engineer at Job Board</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/corelight/jobs/1789018'>Job Application for Engineering: Sr. Full-Stack Engineer at Job Board</a></h5> 
 <p><span class="badge badge-light">Columbus, Ohio San Francisco Columbus</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -235,7 +239,7 @@ Rochester School is a private school focused on environmental sustainability and
 <p><span class="badge badge-light">San Francisco, California San Francisco Columbus</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ComputerConsultantsInternational1/743999692249637-full-stack-software-developer-consultant-job-id-63689-'>Computer Consultants International, Inc. Full Stack Software Developer Consultant(Job ID:63689) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ComputerConsultantsInternational1/743999692249637-full-stack-software-developer-consultant-job-id-63689-'>Computer Consultants International, Inc. Full Stack Software Developer Consultant(Job ID:63689) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Salt Lake City, UT</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -243,7 +247,7 @@ Rochester School is a private school focused on environmental sustainability and
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/align-tech/job/oB1yafw4'>Align Technology Careers - Jr. Full Stack Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/align-tech/job/oB1yafw4'>Align Technology Careers - Jr. Full Stack Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Align Technology dev team is looking for a new junior Full-stack developer. 
 Specifically, we're looking for experienced developers to work on VERY 
@@ -326,7 +330,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light">Cologne, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://relocately.join.com/jobs/264223-full-stack-developer-w-m-x'>Job @ Relocately (Berlin): Full Stack Developer (w... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://relocately.join.com/jobs/264223-full-stack-developer-w-m-x'>Job @ Relocately (Berlin): Full Stack Developer (w... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -370,7 +374,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/thehavasgroup/job/oZRB7fwi'>The Havas Group Careers - Full Stack Developer (Java)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/thehavasgroup/job/oZRB7fwi'>The Havas Group Careers - Full Stack Developer (Java)</a></h5> 
 <p><span class="badge badge-light">Toronto Canada</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -388,7 +392,7 @@ published: 11.10.2018). Apply now or check the other available jobs.</p>
 <p>vor 5 Tagen ... TwinCap GmbH has a job opening for Java Full Stack Developer / Senior Java 
 Full Stack Developer in Z?rich (published: 19.07.2019). Apply now or check the?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/3A07DE013B'>STAQ - Jobs: Software Engineer - Full Stack - Apply online</a></h5> 
+<h5><a href='https://www.workable.com/j/3A07DE013B'>STAQ - Jobs: Software Engineer - Full Stack - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply online for the job of Software Engineer - Full Stack at STAQ.</p>
 <hr/>
@@ -458,7 +462,7 @@ Limited.</p>
 <p><span class="badge badge-light">Chicago, Illinois</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cdl-2.workable.com/j/2AA381C11E'>CDL - Jobs: Senior Full Stack JavaScript Developer - Apply online</a></h5> 
+<h5><a href='https://cdl-2.workable.com/j/2AA381C11E'>CDL - Jobs: Senior Full Stack JavaScript Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -468,12 +472,7 @@ Limited.</p>
 machine learning engineers, to craft and implement new product features. You 
 also?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/webmd/job/ohlwafw2'>WebMD Careers - Full Stack Developer</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>2 days ago ... WebMD is searching for a Full Stack Developer. This person will collaborate with 
-a full team of technology professionals to take projects from design specs to?...</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
